CHANGES.txt - 2009-05-22
------------------------

CHANGES IN CUPS V1.4rc1

	- The PPD compiler now defines six variables: CUPS_VERSION,
	  CUPS_VERSION_MAJOR, CUPS_VERSION_MINOR, CUPS_VERSION_PATCH,
	  PLATFORM_NAME, and PLATFORM_ARCH (STR #3203)
	- Fixed a whitespace skipping bug in cupsRasterInterpretPPD.
	- The scheduler did not return HTTP 403 (Forbidden) for authenticated
	  users that were not authorized to do IPP operations (STR #3193)
	- The scheduler did not report more than 8 Product strings from a PPD
	  file.  Some PPD files have as many as 24.
	- ppdOpen*() could crash if a keyword had no value string (something
	  that cupstestppd looks for...)
	- cupsLangDefault() did not return the correct language on Mac OS X.
	- The Mac OS X USB backend did not handle aborted or stalled pipe
	  conditions properly, which prevented drivers from ejecting partial
	  pages when a job was canceled or held.


CHANGES IN CUPS V1.4b3

	- Documentation fixes (STR #3044, STR #3057, STR #3153, STR #3158,
	  STR #3173)
	- Added complete localizations for German, Japanese, Polish, and
	  Russian and partial localizations for Chinese, Danish, Finnish,
	  French, Italian, Korean, Norwegian, Portuguese, and Swedish
	  (STR #3096, STR #3098, STR #3109, STR #3111, STR #3141)
	- Updated the configure check for -fstack-protector (STR #3198)
	- The network backends now correctly convert SNMP supply descriptions to
	  UTF-8 encoding as needed.
	- The scheduler could crash when deleting an attribute (STR #3197)
	- The cups-driverd program did not detect symlink loops (STR #3185)
	- The EPSON 24-pin series driver should now feed the correct amount
	  (STR #2624)
	- The scheduler now automatically logs the last N debug messages for
	  failed print jobs.
	- You can now modify a raw print queue (STR #3133)
        - Fixed a number of ppdi issues and added a unit test to validate that
	  ppdc + ppdi can generate and import the same data (STR #3152)